--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -618,6 +618,8 @@ ul.subscriptions {
     top: 10px; bottom: 10px; border-radius: 8px; box-shadow: 0 0 10px black;
     transition: transform 0.5s ease; transform: scale(1) translateY(0);
 
+    ul.tabs.plain { margin-top: 4px; margin-bottom: 0; }
+
     #post-office-button-overlay {
       position: absolute; top: 12px; right: 12px;
       &:hover { filter: brightness(140%); }
