Remove confirm popup for air-vent, add for labyrinth and ghoul
Add a simple Confirm? popup, the specific messages still need to be
found.

--- a/templates/ajax/game/town/door.html.twig
+++ b/templates/ajax/game/town/door.html.twig
@@ -193,6 +193,8 @@
 
         {% if show_sneaky %}
         document.getElementById('door_exit_sneak').addEventListener('click', function() {
+            if (!confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
+                return;
             $.ajax.easySend( '{{ path('town_door_exit_controller', {'special': 'sneak'}) }}', {},
                 function () {
                     $.ajax.load(null, '{{ path('game_landing') }}', true);
