--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -998,7 +998,7 @@
         {% if allow_enter_town %}
         let townEnterBtn = document.getElementById('town-enter');
         if(townEnterBtn) townEnterBtn.addEventListener('click', function() {
-            {% if not zone.townZone %}
+            {% if not zone.townZone or enter_costs_ap %}
                 if (!confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
                     return;
             {% endif %}
@@ -1010,6 +1010,8 @@
 
         let townEnterEscortBtn = document.getElementById('town-enter-escort');
         if(townEnterEscortBtn) townEnterEscortBtn.addEventListener('click', function() {
+            if (!confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
+                return;
             $.ajax.easySend( '{{ path('beyond_desert_exit_controller', {'special': 'normal-escort'}) }}', {},
                 function () {
                     $.ajax.load(null, '{{ path('game_landing') }}', true);
@@ -1019,8 +1021,6 @@
         {% if show_ventilation and allow_ventilation %}
         let townEnterVentBtn = document.getElementById('town-enter-hero');
         if(townEnterVentBtn) townEnterVentBtn.addEventListener('click', function() {
-            if (!confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
-                return;
             $.ajax.easySend( '{{ path('beyond_desert_exit_controller', {'special': 'hero'}) }}', {},
                 function () {
                     $.ajax.load(null, '{{ path('game_landing') }}', true);
@@ -1030,6 +1030,8 @@
         {% if show_sneaky %}
         let townEnterSneakBtn = document.getElementById('town-enter-sneak');
         if(townEnterSneakBtn) townEnterSneakBtn.addEventListener('click', function() {
+            if (!confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
+                return;
             $.ajax.easySend( '{{ path('beyond_desert_exit_controller', {'special': 'sneak'}) }}', {},
                 function () {
                     $.ajax.load(null, '{{ path('game_landing') }}', true);
