--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -293,6 +293,9 @@ ul.subscriptions {
     display: block;
     padding: 4px;
     min-height: 48px;
+
+    .mh-icon > img { margin-bottom: 3px; }
+
     &>b { padding: 5px; &>img { vertical-align: revert; } }
     &>i { float: right; font-size: 0.7em; opacity: 0.5; }
     &>div.post-note { font-size: 0.8em; span { opacity: 1.0; } }
