--- a/templates/ajax/admin/users/account.html.twig
+++ b/templates/ajax/admin/users/account.html.twig
@@ -229,6 +229,7 @@
                             {{ 'Spezialrollen'|trans({}, 'admin') }}
                         </div>
                         <div class="cell padded rw-3 rw-sm-12">
+                            <div><label><input {% if user|is_granted('ROLE_TEAM') %}checked{% endif %}   {% if user.rightsElevation >= 4 %}disabled{% endif%} type="checkbox" x-trigger-flag="FLAG_TEAM" /> {{ 'Team'|trans({}, 'admin') }}</label></div>
                             <div><label><input {% if user|is_granted('ROLE_ORACLE') %}checked{% endif %} {% if user.rightsElevation >= 3 %}disabled{% endif%} type="checkbox" x-trigger-flag="FLAG_ORACLE" /> {{ 'Orakel'|trans({}, 'admin') }}</label></div>
                             <div><label><input {% if user|is_granted('ROLE_ANIMAC') %}checked{% endif %} {% if user.rightsElevation >= 3 %}disabled{% endif%} type="checkbox" x-trigger-flag="FLAG_ANIMAC" /> {{ 'Animateur'|trans({}, 'admin') }}</label></div>
                         </div>
