--- a/templates/ajax/ajax_plain.html.twig
+++ b/templates/ajax/ajax_plain.html.twig
@@ -2,5 +2,10 @@
 <html lang="{{ app.request.locale }}" x-ajax-intention="inline">
     <body>{% block ajax_base %}{% endblock %}</body>
     {% block js %}
+        {% if is_granted('ROLE_USER') %}
+            <script>
+                $.msg.jumpstart();
+            </script>
+        {% endif %}
     {% endblock %}
 </html>
