Fix restoring the editor forum node after cancelling the editor multiple times

--- a/templates/ajax/forum/view.html.twig
+++ b/templates/ajax/forum/view.html.twig
@@ -209,7 +209,7 @@
             let editor = document.getElementById('forum-forum-editor');
             if (!editor) {
                 editor = document.createElement('div');
-                editor.setAttribute('id', 'forum-editor');
+                editor.setAttribute('id', 'forum-forum-editor');
                 let anchor = document.getElementById('forum-editor-anchor');
                 anchor.parentNode.insertBefore(editor, anchor);
             }
