--- a/templates/ajax/game/town/home_foreign.html.twig
+++ b/templates/ajax/game/town/home_foreign.html.twig
@@ -89,7 +89,7 @@
                     </div>
                     <div class="row">
                         <div class="cell rw-5 rw-lg-6"><span class="highlight">{{ 'Letzte Worte:'|trans({},'game') }}</span></div>
-                        <div class="cell rw-7 rw-lg-6">{{ owner.lastWords }}</div>
+                        <div class="cell rw-7 rw-lg-6">{{ owner.lastWords|trans({}, 'game') }}</div>
                     </div>
                 {% endif %}
             </div>
