--- a/templates/ajax/soul/view_town_content.html.twig
+++ b/templates/ajax/soul/view_town_content.html.twig
@@ -112,7 +112,7 @@
                     {% if citizen.lastWords is empty %}
                         <span>{{ 'Dieser Bürger hat keine letzten Worte hinterlassen ...'|trans({}, 'game') }}</span>
                     {% else %}
-                        <b>{{"Letzte Worte:"|trans({}, 'game')}}</b> {{ citizen.lastWords }}
+                        <b>{{"Letzte Worte:"|trans({}, 'game')}}</b> {{ citizen.lastWords|trans({}, 'game') }}
                     {% endif %}
                 </div>
             </div>
@@ -136,7 +136,7 @@
                     <i>{{'Unbekannte Todesursache'|trans({}, 'game')}}</i>
                 {% endif %}
                 {% if not citizen.lastWords is empty %}
-                    : <span class="small">"{{ citizen.lastWords }}"</span>
+                    : <span class="small">"{{ citizen.lastWords|trans({}, 'game') }}"</span>
                 {% endif %}
                 {% if citizen.comment is not empty %}
                     <br />{{citizen.comment}}
