--- a/templates/ajax/game/town/watchtower.html.twig
+++ b/templates/ajax/game/town/watchtower.html.twig
@@ -38,6 +38,9 @@
             <div class="padded cell rw-12 center small">
                 {% if z0[4] < 100 %}
                 <div class="watchtower-prediction">
+                    {% if z0[5] is not null %}
+                        <div class="note note-critical" style="border: none">{{ z0[5]|trans({},'game') }}</div>
+                    {% endif %}
                     <p>{{ 'Qualität der Abschätzung'|trans({},'game') }}</p>
                     <div class="watchtower-prediction-bar">
                         <div class="watchtower-prediction-progress" style="width: {{ z0[4] }}%;"></div>
@@ -66,6 +69,11 @@
             <div class="padded cell rw-12 center">
                 <strong>{{ 'Morgige Abschätzung'|trans({},'game') }}</strong>
             </div>
+            {% if z1[5] is not null %}
+                <div class="padded cell rw-12">
+                    <div class="note note-critical" style="border: none">{{ z1[5]|trans({},'game') }}</div>
+                </div>
+            {% endif %}
         </div>
         <div class="row">
             {% if z1[0] %}
