--- a/templates/ajax/pm/view.html.twig
+++ b/templates/ajax/pm/view.html.twig
@@ -698,41 +698,45 @@
                 {% set command = command|split('_') %}
                 {% if command|length == 2 %}
                     {% if command[0] == 'oglink' %}
-                        let editor = document.getElementById('global-pm-forum-editor');
-                        if (!editor) return;
 
-                        $.msg.restoreFetchEndpoint();
+                        setTimeout(() => {
+                            let editor = document.getElementById('global-pm-forum-editor');
+                            if (!editor) return;
 
-                        document.getElementById('gpm-forum-content-container').classList.add('hidden');
-                        document.getElementById('pm-forum-actions-container').classList.add('hidden');
-                        document.getElementById('gpm-forum-content-header').innerText = '{{ 'Vorschau'|trans({},'global')|e('js') }}'
-                        document.getElementById('pm-new-thread-controls').classList.add('hidden');
-                        document.getElementById('pm-user-list-container').classList.add('hidden');
-                        document.getElementById('pm-user-list-payload').innerHTML = '';
+                            $.msg.restoreFetchEndpoint();
 
-                        editor.innerText = '';
-                        document.getElementById('pm-user-selector').classList.add('hidden');
-                        document.getElementById('pm-og-info-container').innerHTML = '';
-                        document.getElementById('pm-og-info-container').appendChild($.html.createElement('<i class="fa fa-pulse fa-spinner" />'))
-                        document.getElementById('pm-og-display').classList.remove('hidden');
-                        $.ajax.background().load( document.getElementById('pm-og-info-container'), '{{ url('pm_og_resolve') }}', false, {og: '{{ command[1]|e('js') }}'});
+                            document.getElementById('gpm-forum-content-container').classList.add('hidden');
+                            document.getElementById('pm-forum-actions-container').classList.add('hidden');
+                            document.getElementById('gpm-forum-content-header').innerText = '{{ 'Vorschau'|trans({},'global')|e('js') }}'
+                            document.getElementById('pm-new-thread-controls').classList.add('hidden');
+                            document.getElementById('pm-user-list-container').classList.add('hidden');
+                            document.getElementById('pm-user-list-payload').innerHTML = '';
 
-                        document.getElementById('pm-forum-editor-container').classList.remove('hidden');
-                        document.getElementById('pm-forum-editor-header').innerHTML = '<i class="fa fa-spin fa-circle-notch"></i> {{ 'Wird geladen...'|trans({},'global')|e('js') }}';
+                            editor.innerText = '';
+                            document.getElementById('pm-user-selector').classList.add('hidden');
+                            document.getElementById('pm-og-info-container').innerHTML = '';
+                            document.getElementById('pm-og-info-container').appendChild($.html.createElement('<i class="fa fa-pulse fa-spinner" />'))
+                            document.getElementById('pm-og-display').classList.remove('hidden');
+                            $.ajax.background().load( document.getElementById('pm-og-info-container'), '{{ url('pm_og_resolve') }}', false, {og: '{{ command[1]|e('js') }}'});
 
-                        document.getElementById('gpm-forum-content').innerHTML = '<ul>{{ _self.pm_preview(app.user)|e('js') }}</ul>';
+                            document.getElementById('pm-forum-editor-container').classList.remove('hidden');
+                            document.getElementById('pm-forum-editor-header').innerHTML = '<i class="fa fa-spin fa-circle-notch"></i> {{ 'Wird geladen...'|trans({},'global')|e('js') }}';
 
-                        document.getElementById('post-office-mobile-wrapper').classList.add('panel-2');
-                        $.html.forEach('.pm-conversation-list>li.selected', e => e.classList.remove('selected'));
+                            document.getElementById('gpm-forum-content').innerHTML = '<ul>{{ _self.pm_preview(app.user)|e('js') }}</ul>';
 
-                        if (editor) $.ajax.background().load( editor, '{{ url('pm_og_thread_editor_controller') }}', false, {}, function() {
-                            document.getElementById('pm-forum-editor-header').innerText = '{{ 'Eine offizielle Gruppe kontaktieren'|trans({},'global') }}';
+                            document.getElementById('post-office-mobile-wrapper').classList.add('panel-2');
+                            $.html.forEach('.pm-conversation-list>li.selected', e => e.classList.remove('selected'));
 
-                            document.getElementById('gpm-forum-content-container').classList.remove('hidden');
-                            document.getElementById('pm-new-thread-controls').classList.remove('hidden');
+                            if (editor) $.ajax.background().load( editor, '{{ url('pm_og_thread_editor_controller') }}', false, {}, function() {
+                                document.getElementById('pm-forum-editor-header').innerText = '{{ 'Eine offizielle Gruppe kontaktieren'|trans({},'global') }}';
 
-                            $.html.forEach('#global-pm-forum-editor-title', e => e.focus());
-                        } );
+                                document.getElementById('gpm-forum-content-container').classList.remove('hidden');
+                                document.getElementById('pm-new-thread-controls').classList.remove('hidden');
+
+                                $.html.forEach('#global-pm-forum-editor-title', e => e.focus());
+                            } );
+                        }, 10);
+
                     {% endif %}
                 {% endif %}
             {% endif %}
