Fix og:image path

--- a/templates/web/framework.html.twig
+++ b/templates/web/framework.html.twig
@@ -17,7 +17,7 @@
         <!-- Set OG tags for Social Network Ads :] -->
         <meta property="og:title" content="MyHordes">
         <meta property="og:description" content="{{ 'Das Zombie Survival Game!'|trans({}, 'global')}}">
-        <meta property="og:image" content="{{ asset('build/images/favicon.ico') }}">
+        <meta property="og:image" content="{{ absolute_url(asset('build/images/favicon.ico')) }}">
         <meta property="og:url" content="{{ app.request.uri }}">
         <meta property="og:locale" content="de_DE" />
         <meta property="og:locale:alternate" content="fr_FR" />
