--- a/templates/web/framework.html.twig
+++ b/templates/web/framework.html.twig
@@ -19,6 +19,7 @@
         <meta property="og:description" content="{{ 'Das Zombie Survival Game!'|trans({}, 'global')}}">
         <meta property="og:image" content="{{ absolute_url(asset('build/images/favicon.ico')) }}">
         <meta property="og:url" content="{{ app.request.uri }}">
+        <meta property="og:type" content="website">
         <meta property="og:locale" content="de_DE" />
         <meta property="og:locale:alternate" content="fr_FR" />
         <meta property="og:locale:alternate" content="es_ES" />
